--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .grid {
   display: grid;
+  height: 100vh;
+  place-items: center;
   grid-template-columns: repeat(6, 100px);
   gap: 1em;
   width: fit-content;
